Fixed Flex-box margin overlapping text

--- a/css/index.styl
+++ b/css/index.styl
@@ -43,8 +43,7 @@ body
 
     &:hover
       color: hsl(13, 100%, 52%)
-      border: solid 10px hsl(13, 100%, 52%)
-      padding: 2px
+      border-color: hsl(13, 100%, 52%)
 
 .content
   a
